--- a/Census Data.ipynb
+++ b/Census Data.ipynb
@@ -24144,32 +24144,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "congressional_df['State'] = congressional_df.NAME.apply(lambda x: x.split(', ')[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "congressional_df.groupby('state').count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "#congressional_df.groupby('State').count()\n",
-    "congressional_df.head()"
+    "super_table.to_csv('main_census_election_df.csv')"
    ]
   },
   {
@@ -24251,16 +24230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "obtain_business_data('01', '01')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
