--- a/Classification_Models _Previous_Results.ipynb
+++ b/Classification_Models _Previous_Results.ipynb
@@ -17,7 +17,7 @@
     "%matplotlib inline\n",
     "import seaborn as sns\n",
     "\n",
-    "#SKlearn and Scipy Models\n",
+    "#SKLearn and Scipy Models\n",
     "from sklearn import datasets, linear_model\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import confusion_matrix\n",
